# ap-cli

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  tag.yml
ap/: main.py
ap/commands/: command.py  login.py
docs/: cimd.json  client.jsonld
src/ap/: __main__.py  main.py  version.py
src/ap/commands/: login.py
tests/: test_login.py
