[build-system]
requires = ["uv_build >= 0.10.7, <0.11.0"]
build-backend = "uv_build"

[project]
name = "activitypub-cli"
version = "0.4.0.dev2"
description = "Command-line client for the ActivityPub API"
authors = [
    {name = "Evan Prodromou",email = "evan@prodromou.name"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests-oauthlib (>=2.0.0,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "webfinger (>=1.0,<2.0)",
    "toml (>=0.10.2,<0.11.0)",
    "requests (>=2.32.4,<3.0.0)"
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["activitypub", "social", "client"]

[project.scripts]
ap = "ap.main:main"
